src/IuchBundle/Resources/public/css/admin.css
.sonata-autocomplete-dropdown {
    min-width: 300px;
}
/**************************/
/******* DASHBOARD ********/
/**************************/
h1 {
    color: #D5661D;
    text-align: center;
}
p {
    text-align: center;
}
a {
    color: #D5661D;
}
a:hover {
    color: #903A00;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.text-info  {
    background-color: #EEF9EA;
    color: #1B7E5A;
}

#send-email {
    color: #FFF;
}
.sonata-bc h2 {
    color: #014C2D;
    text-align: center;
}
.sonata-ba-view-title {
    color: #D5661D;
}
#stats-blocks h2 {
    color: #FFF;
}

/**************************/
/****** STATISTIQUES ******/
/**************************/
#block__badges{
    background-color: #2DAB62;
    border-radius: 1em;
    border: #FFF 1px solid;
}
#block__materiel {
    background-color: #D5661D;
    border-radius: 1em;
    border: #FFF 1px solid;
}
#block__materiel h3,
#block__tenues h3 {
    color: #fff;
    text-align: center;
}
#block__tenues{
    background-color: #712D82;
    border-radius: 1em;
    border: #FFF 1px solid;
}
.blocks__statuser h1, h2 {
    text-align: center;
    color:white;
}

/**************************/
/********* BLOCKS *********/
/**************************/
.container {
    width: 80%;
    margin: 20px auto;
}
.navbar-static-top .navbar-right li:last-of-type a {
    display: inline-block;
}
.tablesorter {
    background: #fff;
}
table.tablesorter thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
    background-color: #2DAB62;
}
th a {
    color: #333 !important;
}
table {
    background: #FFF;
}
.table-hover > tbody > tr:hover > td {
    background-color: #EEF9EA;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.table table-hover {
    background-color: #EEF9EA;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.sonata-ba-list td.sonata-ba-list-field a.sonata-link-identifier {
    color: #D5661D;
}
.sonata-ba-list td.sonata-ba-list-field a.sonata-link-identifier:hover {
    color: #903A00;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.sonata-ba-list-field a {
    color: #D5661D;
}
.box {
    width: 77%;
    margin: 20px auto;
}
.box-title {
    color: #D5661D;
}
.box.box-success {
    width: 100%;
}
.box.box-primary {
    width: 100%;
}
.box.box-primary {
    border-top-color: #1B7E5A;
}
.input-group.date {
    max-width: 132px;
}
.btn-link {
    color: #1B7E5A;
}
.btn-link:hover {
    color: #0D4430;
    text-decoration: none;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.btn.btn-success:hover {
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.btn.btn-info {
    border-color: #712D82;
}
.btn.btn-info:hover {
    background-color: #712D82;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.label-danger:hover {
     background-color: #A81410;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.label-success:hover {
    background-color: #1B7E5A;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.bg-info {
    background-color: #EEF9EA !important;
}
.callout.callout-info {
    background-color: #EEF9EA;
    border-color: #EEF9EA;
}
.btn-group > .btn:hover {
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.input-group-addon {
     background-color: #EEF9EA !important;
}
.input-group-addon:hover {
    background-color: #BDD4B1 !important;
    cursor: pointer;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
/**************************/
/********* CHART **********/
/**************************/
.dynatable-per-page-label {
    margin-left: 10px;
}
#chart-example-chart {
    margin-top: 10px;
    height: 400px;
}
.btn.primary {
    color: #ffffff;
    background-color: #2DAB62;
    border-radius: 0.5em;
}
.btn.primary:hover {
    background-color: #46C47B;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
 }
.btn.btn-primary {
    background-color: #2DAB62;
}
.btn.btn-primary:hover {
    background-color: #1B7E5A;
    -webkit-transition: 0.4s;
    -moz-transition:0.4s;
    transition: 0.4s;
}
.dynatable-pagination-links {
    margin-top: 10px;
}
.dynatable-record-count {
    margin-top: 10px;
    display: none !important;
}
p.select-chart {
    margin-top: 10px;
    float: left;
}
.dynatable-active-page {
    background-color: #2DAB62 !important;
}
th.dynatable-head {
    background-color: #2DAB62 !important;
    text-align: center;
}
.dynatable-per-page-select {
    width: 13% !important;
    margin-bottom: 10px;
}
.dynatable-head a {
    color: #FFF !important;
}
.select-all {
    width: 13% !important;
    margin-bottom: 10px;
}
.highcharts-title tspan {
    font-size: 30px !important;
    font-family: 'Source Sans Pro', sans-serif !important;
    font-weight: 500;
    line-height: 1.1;
    fill: #014C2D !important;
}
tspan {
    fill: #1B7E5A;
}
.select-label {
    font-weight: 400;
}
.select2-results .select2-highlighted {
    background-color: #2DAB62;
}

.logo img {
    max-width: 90px;
}

.logo img + span {
    width:100px;
}

.footer-admin {
    left: 0;
    padding: 10px;
    background: #eee;
    min-height:50px;
    bottom: auto;
}

.footer-admin a {
    color: darkgray;
}

